# language_project

./: .gitignore  README.md  conversation_history.db  pyproject.toml
backend/: app.py
backend/api/: chatbot_service.py  models.py  routes.py
data/: prompts.json
frontend/: streamlit_main.py
frontend/pages/: audio_conversation.py  chat_page.py
src/: bot.py  main.py  streamlit_main.py  streamlit_ui.py
src/app_pages/: audio_conversation.py  chat_page.py
