[tool.poetry]
name = "poetry-language"
version = "0.1.0"
description = ""
authors = ["saadmhd07"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
together = "^1.3.3"
openai = "^1.52.0"
streamlit = "^1.39.0"
langchain = "^0.3.4"
langchain-together = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
